hopefully fixing some overflow things.

--- a/src/app.css
+++ b/src/app.css
@@ -251,5 +251,5 @@ body {
     background-position: top;
     align-items: flex-start;
     font-family:Arial, Helvetica, sans-serif;
-    overflow: scroll
+    overflow-y: scroll
 }
